[package]
name = "navistat"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "A cli tool for Experimenting with Rust Statistical Analysis"
keywords = ["commandline", "statistics"]
documentation = "https://docs.rs/navistat"

[[bin]]
name = "navistat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
csv = "1.2"
ndarray = "0.15.6"
plotly = "0.8.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
stati = "0.11.0-beta"
statrs = "0.16.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
